--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-
+    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam architecto culpa delectus ipsum, iusto laboriosam laudantium magnam maxime nemo neque nesciunt perspiciatis possimus quis quos repellat sapiente tenetur vitae!</h1>
 </body>
 </html>
